--- a/result_manual.html
+++ b/result_manual.html
@@ -462,7 +462,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel-title" style="margin-top: 30px;">建議訓練方向</div>
+                <div class="panel-title" style="margin-top: 30px;">心理介入與神經回饋應用結合</div>
                 <div class="training-suggestions">
                     <div class="suggestion-item">
                         <h3>高焦慮組</h3>
