--- a/result.html
+++ b/result.html
@@ -430,7 +430,7 @@
                 </div>
             </div>
             <div class="right-panel">
-                <div class="panel-title">焦慮程度說明</div>
+                <div class="panel-title">焦慮程度分級（依常見文獻與臨床參考）</div>
                 <div class="anxiety-levels">
                     <div class="level-item">
                         <div class="level-header low">
