--- a/result_manual.html
+++ b/result_manual.html
@@ -417,7 +417,7 @@
                     </select>
                 </div>
                 <div class="input-group">
-                    <label>總分：</label>
+                    <label>STAI總分：</label>
                     <input type="number" id="totalScore" min="20" max="80" required>
                     <div class="total-score" id="displayScore"></div>
                     <div class="anxiety-level" id="anxietyLevel"></div>
@@ -435,7 +435,7 @@
                 </div>
             </div>
             <div class="right-panel">
-                <div class="panel-title">焦慮程度說明</div>
+                <div class="panel-title">焦慮程度分級（依常見文獻與臨床參考）</div>
                 <div class="anxiety-levels">
                     <div class="level-item">
                         <div class="level-header low">
