--- a/result_manual2.html
+++ b/result_manual2.html
@@ -395,7 +395,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>STAI 測驗結果</h1>
+        <h1>State-Trait Anxiety Inventory (STAI) 測驗結果</h1>
         <div class="main-content">
             <div class="left-panel">
                 <div class="panel-title">基本資訊</div>
